Fixed out of alignment attachment controls
Update _transform.scss and stylesheet.css

--- a/theme/assets/parent/_transform.scss
+++ b/theme/assets/parent/_transform.scss
@@ -25,3 +25,11 @@ blockquote cite:before,
 .rtl .uncited:before {
   content: none;
 }
+
+table.fixed-width-table {
+	table-layout: inherit;
+}
+
+.attach-controls {
+  float: right;
+}
